--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model AmigoDono.Web.Models.AmigoView
-
+﻿@model AmigoDono.Model.AMIGO
 @{
     ViewBag.Title = "Cadastre-se";
 }
@@ -31,107 +30,127 @@
                             </span>
                         </div>
                         <div class="col-md-12 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Nome)
-                            @Html.EditorFor(model => model.Amigo.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Nome, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Nome)
+                            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="mb-3">
-                        @Html.LabelFor(model => model.Amigo.DataNascimento)
+                        @Html.LabelFor(model => model.DataNascimento)
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"></span>
                             </div>
-                            @Html.EditorFor(model => model.Amigo.DataNascimento, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.DataNascimento, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
+                            @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="mb-3">
-                        @Html.LabelFor(model => model.Amigo.Funcao)
+                        @Html.LabelFor(model => model.CPF)
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"></span>
                             </div>
-                            @Html.EditorFor(model => model.Amigo.Funcao, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Funcao, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="mb-3">
-                        @Html.LabelFor(model => model.Amigo.Ajuda)
+                        @Html.LabelFor(model => model.CNPJ)
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"></span>
                             </div>
-                            @Html.EditorFor(model => model.Amigo.Ajuda, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Ajuda, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.CNPJ, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CNPJ, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="mb-3">
-                        @Html.LabelFor(model => model.Amigo.Senha)
+                        @Html.LabelFor(model => model.Funcao)
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"></span>
                             </div>
-                            @Html.EditorFor(model => model.Amigo.Senha, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Senha, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Funcao, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Funcao, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="mb-3">
-                        @Html.LabelFor(model => model.Amigo.Email)
-                        @Html.EditorFor(model => model.Amigo.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "fulano@exemplo.com" } })
-                        @Html.ValidationMessageFor(model => model.Amigo.Email, "", new { @class = "text-danger" })
+                        @Html.LabelFor(model => model.Ajuda)
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"></span>
+                            </div>
+                            @Html.EditorFor(model => model.Ajuda, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Ajuda, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(model => model.Senha)
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"></span>
+                            </div>
+                            @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
+                            @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(model => model.Email)
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "fulano@exemplo.com" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
                     <div class="row">
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Cidade)
-                            @Html.EditorFor(model => model.Amigo.Cidade, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Cidade, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Cidade)
+                            @Html.EditorFor(model => model.Cidade, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Cidade, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-4 mb-3">
-                            @Html.LabelFor(model => model.Amigo.UF)
-                            @Html.EditorFor(model => model.Amigo.UF, new { htmlAttributes = new { @class = "custom-select d-block w-100 form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.UF, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.UF)
+                            @Html.EditorFor(model => model.UF, new { htmlAttributes = new { @class = "custom-select d-block w-100 form-control" } })
+                            @Html.ValidationMessageFor(model => model.UF, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-3 mb-3">
-                            @Html.LabelFor(model => model.Amigo.CEP)
-                            @Html.EditorFor(model => model.Amigo.CEP, new { htmlAttributes = new { @class = "form-control", @id = "txtCEP" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.CEP, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.CEP)
+                            @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control", @id = "txtCEP" } })
+                            @Html.ValidationMessageFor(model => model.CEP, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.NomeLogradouro)
-                            @Html.EditorFor(model => model.Amigo.NomeLogradouro, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.NomeLogradouro, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.NomeLogradouro)
+                            @Html.EditorFor(model => model.NomeLogradouro, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NomeLogradouro, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Logradouro)
-                            @Html.EditorFor(model => model.Amigo.Logradouro, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Logradouro, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Logradouro)
+                            @Html.EditorFor(model => model.Logradouro, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Logradouro, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Numero)
-                            @Html.EditorFor(model => model.Amigo.Numero, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Numero, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Numero)
+                            @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Complemento)
-                            @Html.EditorFor(model => model.Amigo.Complemento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Rua dos lobos, nº 0" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Complemento, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Complemento)
+                            @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Rua dos lobos, nº 0" } })
+                            @Html.ValidationMessageFor(model => model.Complemento, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Bairro)
-                            @Html.EditorFor(model => model.Amigo.Bairro, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Bairro, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Bairro)
+                            @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Bairro, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Telefone)
-                            @Html.EditorFor(model => model.Amigo.Telefone, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Telefone, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Telefone)
+                            @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-5 mb-3">
-                            @Html.LabelFor(model => model.Amigo.Celular)
-                            @Html.EditorFor(model => model.Amigo.Celular, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Amigo.Celular, "", new { @class = "text-danger" })
+                            @Html.LabelFor(model => model.Celular)
+                            @Html.EditorFor(model => model.Celular, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Celular, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <hr class="mb-4">
