--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -23,12 +23,12 @@
                 <form>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="row">
-                        @*@Html.LabelFor(model => model.Imagem, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Imagem, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <span class="btn btn-default btn-file">
                                 @Html.TextBoxFor(model => model.Imagem, new { @type = "file" })
                             </span>
-                        </div>*@
+                        </div>
                         <div class="col-md-12 mb-3">
                             @Html.LabelFor(model => model.Nome)
                             @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
