--- a/AmigoDono.Web/Views/Feedback/FaleConosco.cshtml
+++ b/AmigoDono.Web/Views/Feedback/FaleConosco.cshtml
@@ -22,133 +22,28 @@
     <div class="content">
         <h1>Dê sua opinião a respeito do nosso trabalho</h1>
         <div class="main">
-            <form>
-                <h5>Nome</h5>
-                <input type="text" value="Digite aqui" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">
-                <h5>Email</h5>
-                <input type="text" value="rafael.lduarte@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'rafael.lduarte@gmail.com';}" required="">
+       @using (Html.BeginForm("Create", "FEEDBACK", FormMethod.Post))
+        {
+             
+             @Html.AntiForgeryToken()
 
-                <h5>Sua opinião</h5>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <h5>Nome</h5>
+            <input type="text" name="Nome" value="Digite aqui" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">
+            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+            <h5>Email</h5>
+            <input type="text" name="Email" value="rafael.lduarte@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'rafael.lduarte@gmail.com';}" required="">
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            <h5>Sua opinião</h5>
+            <textarea name="Opiniao" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">Digite aqui</textarea>
+            @Html.ValidationMessageFor(model => model.Opiniao, "", new { @class = "text-danger" })
+            <h5>Há algo que você gostaria de nos dizer?</h5>
+            <textarea name="Feedback" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Dugite aqui';}" required="">Digite aqui</textarea>
+            @Html.ValidationMessageFor(model => model.Feedback, "", new { @class = "text-danger" })
 
-                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">Digite aqui</textarea>
+            <input type="submit" value="Enviar Feedback">
+        }
 
-            </form>
-
-            @*<h5>Sua eperiência no site</h5>
-
-            <div class="radio-btns">
-
-                <div class="swit">
-
-                    <div class="check_box_one"> <div class="radio"> <label><input type="radio" name="radio" checked=""><i></i>Muito boa</label> </div></div>
-
-                    <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Boa</label> </div></div>
-
-                    <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Fair</label> </div></div>
-
-                    <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Poor</label> </div></div>
-
-                    <div class="clear"></div>
-
-                </div>
-
-            </div>
-
-            <h5>Timely Response</h5>
-
-            <div class="radio-btns">
-
-                <div class="swit">
-
-                    <div class="check_box_one"> <div class="radio1"> <label><input type="radio" name="radio1" checked=""><i></i>Very Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Fair</label> </div></div>
-
-                    <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Poor</label> </div></div>
-
-                    <div class="clear"></div>
-
-                </div>
-
-            </div>
-
-            <h5>Our Support</h5>
-
-            <div class="radio-btns">
-
-                <div class="swit">
-
-                    <div class="check_box_one"> <div class="radio2"> <label><input type="radio" name="radio2" checked=""><i></i>Very Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Fair</label> </div></div>
-
-                    <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Poor</label> </div></div>
-
-                    <div class="clear"></div>
-
-                </div>
-
-            </div>
-
-            <h5>Overall Satisfaction</h5>
-
-            <div class="radio-btns">
-
-                <div class="swit">
-
-                    <div class="check_box_one"> <div class="radio3"> <label><input type="radio" name="radio3" checked=""><i></i>Very Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Good</label> </div></div>
-
-                    <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Fair</label> </div></div>
-
-                    <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Poor</label> </div></div>
-
-                    <div class="clear"></div>
-
-                </div>
-
-            </div>
-
-            <h5>Want to rate with us for customer services?</h5>
-
-            <span class="starRating">
-
-                <input id="rating5" type="radio" name="rating" value="5">
-
-                <label for="rating5">5</label>
-
-                <input id="rating4" type="radio" name="rating" value="4">
-
-                <label for="rating4">4</label>
-
-                <input id="rating3" type="radio" name="rating" value="3">
-
-                <label for="rating3">3</label>
-
-                <input id="rating2" type="radio" name="rating" value="2" checked>
-
-                <label for="rating2">2</label>
-
-                <input id="rating1" type="radio" name="rating" value="1">
-
-                <label for="rating1">1</label>
-
-            </span>*@
-
-            <form>
-
-                <h5>Há algo que você gostaria de nos dizer?</h5>
-
-                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Dugite aqui';}" required="">Digite aqui</textarea>
-
-                <input type="submit" value="Enviar Feedback">
-
-            </form>
 
         </div>
 
