--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         @Html.ActionLink("Meus Dados", "Detalhes", "DADOS")
                     </li>
                     <li>
-                        @Html.ActionLink("Apoiadores", "Contact", "Home")
+                        @Html.ActionLink("Apoiadores", "Apoiadores", "APOIADORES")
                     </li>
                     <li>@Html.ActionLink("Cuidados", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Denúncias", "Create", "DENUNCIA")</li>
